# deep-function-approximation

./: .gitignore  LICENSE  README.md  lightning_cli.py  pyproject.toml
configurations/: logexpmlp_reciprocal_normal.yaml  logexpmlp_sin_normal.yaml  mlp_abs_normal.yaml  mlp_abs_reciprocal_normal.yaml  mlp_angle_normal.yaml  mlp_cos_normal.yaml  mlp_cross_product_normal.yaml  mlp_difference_normal.yaml  mlp_exp_normal.yaml  mlp_linear_find_zero_normal.yaml  mlp_linear_gradient_normal.yaml  mlp_log_exponential.yaml  mlp_log_gradient_normal.yaml  mlp_log_normal.yaml  mlp_log_quotient_normal.yaml  mlp_matrix_inverse_normal.yaml  mlp_max_normal.yaml  mlp_mean_normal.yaml  mlp_min_normal.yaml  mlp_neglogabs_normal.yaml  mlp_product_normal.yaml  mlp_quotient_normal.yaml  mlp_reciprocal_normal.yaml  mlp_reciprocal_uniform.yaml  mlp_signed_neglogabs_normal.yaml  mlp_sin_normal.yaml  mlp_square_difference_normal.yaml  mlp_square_normal.yaml  mlp_square_root_exponential.yaml  mlp_std_normal.yaml  mlp_sum_normal.yaml  mlp_tan_normal.yaml  mlp_unit_vector_normal.yaml  mlp_vector_norm_normal.yaml  mlplog_abs_reciprocal_normal.yaml  mlplog_linear_gradient_normal.yaml  mlplog_reciprocal_normal.yaml  mlplog_sin_normal.yaml  rmlp_sin_normal.yaml  sps_reciprocal_normal.yaml  (+2 more)
deep_function_approximation/data/: __init__.py  exponential_distribution_dataset.py  function_batch.py  matrix_normal_dataset.py  normal_distribution_dataset.py  uniform_distribution_dataset.py  vector_dataset_factory.py  vector_function_batch.py
deep_function_approximation/data_modules/: __init__.py  (+2 more)
(+49 files in other folders)
