[tool.poetry]
name = "deep-function-approximation"
version = "0.1.0"
description = "Deep learning for approximating various functions"
authors = ["John Skinner <jskinn7@gmail.com>"]
license = "BSD 2-clause"
readme = "README.md"
packages = [{include = "deep_function_approximation"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = ">=2.3"
numpy = ">=1.26"
lightning = {extras = ["pytorch-extra"], version = "^2.1.0"}
mlflow = "^2.10.2"
# Explicitly list pytorch cuda dependencies, because poetry can't find them automatically
#nvidia-cuda-nvrtc-cu12 ="12.1.105"
#nvidia-cuda-runtime-cu12 ="12.1.105"
#nvidia-cuda-cupti-cu12 ="12.1.105"
#nvidia-cudnn-cu12 ="8.9.2.26"
#nvidia-cublas-cu12 ="12.1.3.1"
#nvidia-cufft-cu12 ="11.0.2.54"
#nvidia-curand-cu12 ="10.3.2.106"
#nvidia-cusolver-cu12 ="11.4.5.107"
#nvidia-cusparse-cu12 ="12.1.0.106"
#nvidia-nccl-cu12 ="2.18.1"
#nvidia-nvtx-cu12 ="12.1.105"
#triton ="2.1.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
